# 4TU-CodePublish

./: .gitignore  Dockerfile  LICENSE  README.md  create_metadata.sh  dataset_example.json  dataset_response.json  docker_publish.sh  example_metadata.json  module_build.sh  module_install.sh  pyproject.toml  references_example.json  requirements.txt  setup.py  tags_example.json
.github/workflows/: docker-image.yml  release.yml
_4tu_codepublish/: _4tu_codepublish.py  _version.py
_4tu_codepublish/api/: dataset_api.py
_4tu_codepublish/util/: code_publisher.py  metadata_helper.py
pipeline_examples/gitlab/: .gitlab-ci.yml
src/: 4tu-codepublish.py  config.py  main.py
src/api/: dataset_api.py
src/conf/: config.py
src/model/: dataset.py
src/util/: code_publisher.py  log_helper.py  metadata_helper.py
